proba1 sshield-PC

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.22)
+#cmake_minimum_required(VERSION 3.22)
+cmake_minimum_required(VERSION 3.18.4)
 project(Navigator)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -7,7 +8,7 @@ add_subdirectory(test/googletest-main) # почему именно subdirectory
 include_directories(test/googletest-main/googletest/include)
 
 add_executable(Navigator
-#        navigator/main.cpp
+        navigator/main.cpp
         navigator/s21_graph/s21_graph.cpp navigator/s21_graph/s21_graph.h
         navigator/matrix/Matrix.cpp navigator/matrix/Matrix.hpp
         navigator/s21_graph/s21_graph_algorithms.h navigator/s21_graph/s21_graph_algorithms.cpp
